@@ -38,7 +38,7 @@ import com.planet_ink.coffee_mud.Races.interfaces.*;
    See the License for the specific language governing permissions and
    limitations under the License.
 */
-public class GenEarring extends GenThinArmor
+public class GenEarring extends GenThinArmor implements BodyToken
 {
 	@Override
 	public String ID()
